RPGML/rpgml.output
Terminals unused in grammar

   "->"
   "++"
   "--"
   "..."
   ".."
   "this"


State 39 conflicts: 2 reduce/reduce
State 58 conflicts: 2 shift/reduce
State 76 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit "end of file"

    1 identifier: "identifier"
    2           | "in"
    3           | "to"
    4           | "step"

    5 array_constant: '[' ']'
    6               | '[' sequence ']'

    7 map_constant: compound_statement

    8 primary_expression: identifier
    9                   | constant
   10                   | '(' expression ')'
   11                   | '(' sequence_expression ')'

   12 constant: "integer constant"
   13         | "floating point constant"
   14         | "string constant"
   15         | "true"
   16         | "false"
   17         | array_constant
   18         | map_constant

   19 function_call_expression: postfix_expression '(' ')'
   20                         | postfix_expression '(' argument_expression_list ')'

   21 postfix_expression: postfix_expression '[' expression ']'
   22                   | postfix_expression '.' identifier
   23                   | function_call_expression
   24                   | primary_expression

   25 argument_expression: expression
   26                    | identifier '=' expression

   27 argument_expression_list: argument_expression
   28                         | argument_expression_list ',' argument_expression

   29 unary_expression: postfix_expression
   30                 | unary_operator unary_expression

   31 unary_operator: '+'
   32               | '-'
   33               | '~'
   34               | '!'

   35 multiplicative_expression: unary_expression
   36                          | multiplicative_expression '*' unary_expression
   37                          | multiplicative_expression '/' unary_expression
   38                          | multiplicative_expression '%' unary_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression "<<" additive_expression
   44                 | shift_expression ">>" additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression "<=" shift_expression
   49                      | relational_expression ">=" shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression "==" relational_expression
   52                    | equality_expression "!=" relational_expression

   53 and_expression: equality_expression
   54               | and_expression '&' equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression '^' and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression '|' exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression "&&" inclusive_or_expression

   61 logical_exclusive_or_expression: logical_and_expression
   62                                | logical_exclusive_or_expression "^^" logical_and_expression

   63 logical_inclusive_or_expression: logical_exclusive_or_expression
   64                                | logical_inclusive_or_expression "||" logical_exclusive_or_expression

   65 conditional_expression: logical_inclusive_or_expression
   66                       | logical_inclusive_or_expression '?' expression ':' conditional_expression

   67 expression: conditional_expression

   68 assignment_statement: identifier assignment_operator expression ';'
   69                     | postfix_expression '.' identifier assignment_operator expression ';'
   70                     | postfix_expression '[' expression ']' assignment_operator expression ';'

   71 assignment_operator: '='
   72                    | "*="
   73                    | "/="
   74                    | "%="
   75                    | "+="
   76                    | "-="
   77                    | "<<="
   78                    | ">>="
   79                    | "&="
   80                    | "^="
   81                    | "|="

   82 type_specifier: "bool"
   83               | "int"
   84               | "float"
   85               | "string"
   86               | "Array"
   87               | "Map"
   88               | "Output"
   89               | "Input"
   90               | "Param"

   91 statement: compound_statement
   92          | selection_statement
   93          | iteration_statement
   94          | function_definition_statement
   95          | function_call_statement
   96          | assignment_statement
   97          | variable_creation_statement
   98          | return_statement
   99          | "flush evaluaton"
  100          | ';'

  101 statements: statement
  102           | statements statement
  103           | statements error ';'
  104           | error ';'

  105 compound_statement: '{' '}'
  106                   | '{' statements '}'
  107                   | '{' error '}'

  108 selection_statement: "if" '(' expression ')' statement "else" statement
  109                    | "if" '(' expression ')' statement

  110 expression_sequence_expression: expression
  111                               | expression_sequence_expression ',' expression

  112 sequence_expression: expression "to" expression
  113                    | expression "to" expression "step" expression
  114                    | expression_sequence_expression

  115 sequence: sequence_expression

  116 iteration_statement: "for" identifier "in" expression statement
  117                    | "for" identifier '=' sequence statement

  118 function_argument_decl: identifier
  119                       | identifier '=' expression

  120 function_argument_decl_list: function_argument_decl
  121                            | function_argument_decl_list ',' function_argument_decl

  122 function_definition_statement: "Function" identifier '(' ')' compound_statement
  123                              | "Function" identifier '(' function_argument_decl_list ')' compound_statement
  124                              | "Function" identifier '=' expression ';'

  125 function_call_statement: function_call_expression ';'

  126 variable_creation_statement: type_specifier identifier '=' expression ';'

  127 return_statement: "return" expression ';'

  128 translation_unit_statements: statement
  129                            | translation_unit_statements statement
  130                            | error ';'

  131 translation_unit: translation_unit_statements
  132                 | /* empty */


Terminals, with rules where they appear

"end of file" (0) 0
'!' (33) 34
'%' (37) 38
'&' (38) 54
'(' (40) 10 11 19 20 108 109 122 123
')' (41) 10 11 19 20 108 109 122 123
'*' (42) 36
'+' (43) 31 40
',' (44) 28 111 121
'-' (45) 32 41
'.' (46) 22 69
'/' (47) 37
':' (58) 66
';' (59) 68 69 70 100 103 104 124 125 126 127 130
'<' (60) 46
'=' (61) 26 71 117 119 124 126
'>' (62) 47
'?' (63) 66
'[' (91) 5 6 21 70
']' (93) 5 6 21 70
'^' (94) 56
'{' (123) 105 106 107
'|' (124) 58
'}' (125) 105 106 107
'~' (126) 33
error (256) 103 104 107 130
"flush evaluaton" (258) 99
"identifier" (259) 1
"integer constant" (260) 12
"floating point constant" (261) 13
"string constant" (262) 14
"->" (263)
"++" (264)
"--" (265)
"<<" (266) 43
">>" (267) 44
"<=" (268) 48
">=" (269) 49
"==" (270) 51
"!=" (271) 52
"&&" (272) 60
"||" (273) 64
"^^" (274) 62
"*=" (275) 72
"/=" (276) 73
"%=" (277) 74
"+=" (278) 75
"-=" (279) 76
"<<=" (280) 77
">>=" (281) 78
"&=" (282) 79
"^=" (283) 80
"|=" (284) 81
"bool" (285) 82
"int" (286) 83
"float" (287) 84
"string" (288) 85
"Array" (289) 86
"Map" (290) 87
"Function" (291) 122 123 124
"Output" (292) 88
"Input" (293) 89
"Param" (294) 90
"if" (295) 108 109
"else" (296) 108
"for" (297) 116 117
"in" (298) 2 116
"to" (299) 3 112 113
"step" (300) 4 113
"..." (301)
".." (302)
"true" (303) 15
"false" (304) 16
"this" (305)
"return" (306) 127


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
identifier (77)
    on left: 1 2 3 4, on right: 8 22 26 68 69 116 117 118 119 122 123
    124 126
array_constant (78)
    on left: 5 6, on right: 17
map_constant (79)
    on left: 7, on right: 18
primary_expression (80)
    on left: 8 9 10 11, on right: 24
constant (81)
    on left: 12 13 14 15 16 17 18, on right: 9
function_call_expression (82)
    on left: 19 20, on right: 23 125
postfix_expression (83)
    on left: 21 22 23 24, on right: 19 20 21 22 29 69 70
argument_expression (84)
    on left: 25 26, on right: 27 28
argument_expression_list (85)
    on left: 27 28, on right: 20 28
unary_expression (86)
    on left: 29 30, on right: 30 35 36 37 38
unary_operator (87)
    on left: 31 32 33 34, on right: 30
multiplicative_expression (88)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (89)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (90)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (91)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (92)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (93)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (94)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (95)
    on left: 57 58, on right: 58 59 60
logical_and_expression (96)
    on left: 59 60, on right: 60 61 62
logical_exclusive_or_expression (97)
    on left: 61 62, on right: 62 63 64
logical_inclusive_or_expression (98)
    on left: 63 64, on right: 64 65 66
conditional_expression (99)
    on left: 65 66, on right: 66 67
expression (100)
    on left: 67, on right: 10 21 25 26 66 68 69 70 108 109 110 111
    112 113 116 119 124 126 127
assignment_statement (101)
    on left: 68 69 70, on right: 96
assignment_operator (102)
    on left: 71 72 73 74 75 76 77 78 79 80 81, on right: 68 69 70
type_specifier (103)
    on left: 82 83 84 85 86 87 88 89 90, on right: 126
statement (104)
    on left: 91 92 93 94 95 96 97 98 99 100, on right: 101 102 108
    109 116 117 128 129
statements (105)
    on left: 101 102 103 104, on right: 102 103 106
compound_statement (106)
    on left: 105 106 107, on right: 7 91 122 123
selection_statement (107)
    on left: 108 109, on right: 92
expression_sequence_expression (108)
    on left: 110 111, on right: 111 114
sequence_expression (109)
    on left: 112 113 114, on right: 11 115
sequence (110)
    on left: 115, on right: 6 117
iteration_statement (111)
    on left: 116 117, on right: 93
function_argument_decl (112)
    on left: 118 119, on right: 120 121
function_argument_decl_list (113)
    on left: 120 121, on right: 121 123
function_definition_statement (114)
    on left: 122 123 124, on right: 94
function_call_statement (115)
    on left: 125, on right: 95
variable_creation_statement (116)
    on left: 126, on right: 97
return_statement (117)
    on left: 127, on right: 98
translation_unit_statements (118)
    on left: 128 129 130, on right: 129 131
translation_unit (119)
    on left: 131 132, on right: 0


state 0

    0 $accept: . translation_unit "end of file"

    error                      shift, and go to state 1
    "flush evaluaton"          shift, and go to state 2
    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "bool"                     shift, and go to state 7
    "int"                      shift, and go to state 8
    "float"                    shift, and go to state 9
    "string"                   shift, and go to state 10
    "Array"                    shift, and go to state 11
    "Map"                      shift, and go to state 12
    "Function"                 shift, and go to state 13
    "Output"                   shift, and go to state 14
    "Input"                    shift, and go to state 15
    "Param"                    shift, and go to state 16
    "if"                       shift, and go to state 17
    "for"                      shift, and go to state 18
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    "return"                   shift, and go to state 24
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    ';'                        shift, and go to state 27
    '{'                        shift, and go to state 28

    "end of file"  reduce using rule 132 (translation_unit)

    identifier                     go to state 29
    array_constant                 go to state 30
    map_constant                   go to state 31
    primary_expression             go to state 32
    constant                       go to state 33
    function_call_expression       go to state 34
    postfix_expression             go to state 35
    assignment_statement           go to state 36
    type_specifier                 go to state 37
    statement                      go to state 38
    compound_statement             go to state 39
    selection_statement            go to state 40
    iteration_statement            go to state 41
    function_definition_statement  go to state 42
    function_call_statement        go to state 43
    variable_creation_statement    go to state 44
    return_statement               go to state 45
    translation_unit_statements    go to state 46
    translation_unit               go to state 47


state 1

  130 translation_unit_statements: error . ';'

    ';'  shift, and go to state 48


state 2

   99 statement: "flush evaluaton" .

    $default  reduce using rule 99 (statement)


state 3

    1 identifier: "identifier" .

    $default  reduce using rule 1 (identifier)


state 4

   12 constant: "integer constant" .

    $default  reduce using rule 12 (constant)


state 5

   13 constant: "floating point constant" .

    $default  reduce using rule 13 (constant)


state 6

   14 constant: "string constant" .

    $default  reduce using rule 14 (constant)


state 7

   82 type_specifier: "bool" .

    $default  reduce using rule 82 (type_specifier)


state 8

   83 type_specifier: "int" .

    $default  reduce using rule 83 (type_specifier)


state 9

   84 type_specifier: "float" .

    $default  reduce using rule 84 (type_specifier)


state 10

   85 type_specifier: "string" .

    $default  reduce using rule 85 (type_specifier)


state 11

   86 type_specifier: "Array" .

    $default  reduce using rule 86 (type_specifier)


state 12

   87 type_specifier: "Map" .

    $default  reduce using rule 87 (type_specifier)


state 13

  122 function_definition_statement: "Function" . identifier '(' ')' compound_statement
  123                              | "Function" . identifier '(' function_argument_decl_list ')' compound_statement
  124                              | "Function" . identifier '=' expression ';'

    "identifier"  shift, and go to state 3
    "in"          shift, and go to state 19
    "to"          shift, and go to state 20
    "step"        shift, and go to state 21

    identifier  go to state 49


state 14

   88 type_specifier: "Output" .

    $default  reduce using rule 88 (type_specifier)


state 15

   89 type_specifier: "Input" .

    $default  reduce using rule 89 (type_specifier)


state 16

   90 type_specifier: "Param" .

    $default  reduce using rule 90 (type_specifier)


state 17

  108 selection_statement: "if" . '(' expression ')' statement "else" statement
  109                    | "if" . '(' expression ')' statement

    '('  shift, and go to state 50


state 18

  116 iteration_statement: "for" . identifier "in" expression statement
  117                    | "for" . identifier '=' sequence statement

    "identifier"  shift, and go to state 3
    "in"          shift, and go to state 19
    "to"          shift, and go to state 20
    "step"        shift, and go to state 21

    identifier  go to state 51


state 19

    2 identifier: "in" .

    $default  reduce using rule 2 (identifier)


state 20

    3 identifier: "to" .

    $default  reduce using rule 3 (identifier)


state 21

    4 identifier: "step" .

    $default  reduce using rule 4 (identifier)


state 22

   15 constant: "true" .

    $default  reduce using rule 15 (constant)


state 23

   16 constant: "false" .

    $default  reduce using rule 16 (constant)


state 24

  127 return_statement: "return" . expression ';'

    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    '+'                        shift, and go to state 52
    '-'                        shift, and go to state 53
    '~'                        shift, and go to state 54
    '!'                        shift, and go to state 55
    '{'                        shift, and go to state 28

    identifier                       go to state 56
    array_constant                   go to state 30
    map_constant                     go to state 31
    primary_expression               go to state 32
    constant                         go to state 33
    function_call_expression         go to state 57
    postfix_expression               go to state 58
    unary_expression                 go to state 59
    unary_operator                   go to state 60
    multiplicative_expression        go to state 61
    additive_expression              go to state 62
    shift_expression                 go to state 63
    relational_expression            go to state 64
    equality_expression              go to state 65
    and_expression                   go to state 66
    exclusive_or_expression          go to state 67
    inclusive_or_expression          go to state 68
    logical_and_expression           go to state 69
    logical_exclusive_or_expression  go to state 70
    logical_inclusive_or_expression  go to state 71
    conditional_expression           go to state 72
    expression                       go to state 73
    compound_statement               go to state 74


state 25

    5 array_constant: '[' . ']'
    6               | '[' . sequence ']'

    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    '['                        shift, and go to state 25
    ']'                        shift, and go to state 75
    '('                        shift, and go to state 26
    '+'                        shift, and go to state 52
    '-'                        shift, and go to state 53
    '~'                        shift, and go to state 54
    '!'                        shift, and go to state 55
    '{'                        shift, and go to state 28

    identifier                       go to state 56
    array_constant                   go to state 30
    map_constant                     go to state 31
    primary_expression               go to state 32
    constant                         go to state 33
    function_call_expression         go to state 57
    postfix_expression               go to state 58
    unary_expression                 go to state 59
    unary_operator                   go to state 60
    multiplicative_expression        go to state 61
    additive_expression              go to state 62
    shift_expression                 go to state 63
    relational_expression            go to state 64
    equality_expression              go to state 65
    and_expression                   go to state 66
    exclusive_or_expression          go to state 67
    inclusive_or_expression          go to state 68
    logical_and_expression           go to state 69
    logical_exclusive_or_expression  go to state 70
    logical_inclusive_or_expression  go to state 71
    conditional_expression           go to state 72
    expression                       go to state 76
    compound_statement               go to state 74
    expression_sequence_expression   go to state 77
    sequence_expression              go to state 78
    sequence                         go to state 79


state 26

   10 primary_expression: '(' . expression ')'
   11                   | '(' . sequence_expression ')'

    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    '+'                        shift, and go to state 52
    '-'                        shift, and go to state 53
    '~'                        shift, and go to state 54
    '!'                        shift, and go to state 55
    '{'                        shift, and go to state 28

    identifier                       go to state 56
    array_constant                   go to state 30
    map_constant                     go to state 31
    primary_expression               go to state 32
    constant                         go to state 33
    function_call_expression         go to state 57
    postfix_expression               go to state 58
    unary_expression                 go to state 59
    unary_operator                   go to state 60
    multiplicative_expression        go to state 61
    additive_expression              go to state 62
    shift_expression                 go to state 63
    relational_expression            go to state 64
    equality_expression              go to state 65
    and_expression                   go to state 66
    exclusive_or_expression          go to state 67
    inclusive_or_expression          go to state 68
    logical_and_expression           go to state 69
    logical_exclusive_or_expression  go to state 70
    logical_inclusive_or_expression  go to state 71
    conditional_expression           go to state 72
    expression                       go to state 80
    compound_statement               go to state 74
    expression_sequence_expression   go to state 77
    sequence_expression              go to state 81


state 27

  100 statement: ';' .

    $default  reduce using rule 100 (statement)


state 28

  105 compound_statement: '{' . '}'
  106                   | '{' . statements '}'
  107                   | '{' . error '}'

    error                      shift, and go to state 82
    "flush evaluaton"          shift, and go to state 2
    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "bool"                     shift, and go to state 7
    "int"                      shift, and go to state 8
    "float"                    shift, and go to state 9
    "string"                   shift, and go to state 10
    "Array"                    shift, and go to state 11
    "Map"                      shift, and go to state 12
    "Function"                 shift, and go to state 13
    "Output"                   shift, and go to state 14
    "Input"                    shift, and go to state 15
    "Param"                    shift, and go to state 16
    "if"                       shift, and go to state 17
    "for"                      shift, and go to state 18
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    "return"                   shift, and go to state 24
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    ';'                        shift, and go to state 27
    '{'                        shift, and go to state 28
    '}'                        shift, and go to state 83

    identifier                     go to state 29
    array_constant                 go to state 30
    map_constant                   go to state 31
    primary_expression             go to state 32
    constant                       go to state 33
    function_call_expression       go to state 34
    postfix_expression             go to state 35
    assignment_statement           go to state 36
    type_specifier                 go to state 37
    statement                      go to state 84
    statements                     go to state 85
    compound_statement             go to state 39
    selection_statement            go to state 40
    iteration_statement            go to state 41
    function_definition_statement  go to state 42
    function_call_statement        go to state 43
    variable_creation_statement    go to state 44
    return_statement               go to state 45


state 29

    8 primary_expression: identifier .
   68 assignment_statement: identifier . assignment_operator expression ';'

    "*="   shift, and go to state 86
    "/="   shift, and go to state 87
    "%="   shift, and go to state 88
    "+="   shift, and go to state 89
    "-="   shift, and go to state 90
    "<<="  shift, and go to state 91
    ">>="  shift, and go to state 92
    "&="   shift, and go to state 93
    "^="   shift, and go to state 94
    "|="   shift, and go to state 95
    '='    shift, and go to state 96

    $default  reduce using rule 8 (primary_expression)

    assignment_operator  go to state 97


state 30

   17 constant: array_constant .

    $default  reduce using rule 17 (constant)


state 31

   18 constant: map_constant .

    $default  reduce using rule 18 (constant)


state 32

   24 postfix_expression: primary_expression .

    $default  reduce using rule 24 (postfix_expression)


state 33

    9 primary_expression: constant .

    $default  reduce using rule 9 (primary_expression)


state 34

   23 postfix_expression: function_call_expression .
  125 function_call_statement: function_call_expression . ';'

    ';'  shift, and go to state 98

    $default  reduce using rule 23 (postfix_expression)


state 35

   19 function_call_expression: postfix_expression . '(' ')'
   20                         | postfix_expression . '(' argument_expression_list ')'
   21 postfix_expression: postfix_expression . '[' expression ']'
   22                   | postfix_expression . '.' identifier
   69 assignment_statement: postfix_expression . '.' identifier assignment_operator expression ';'
   70                     | postfix_expression . '[' expression ']' assignment_operator expression ';'

    '['  shift, and go to state 99
    '('  shift, and go to state 100
    '.'  shift, and go to state 101


state 36

   96 statement: assignment_statement .

    $default  reduce using rule 96 (statement)


state 37

  126 variable_creation_statement: type_specifier . identifier '=' expression ';'

    "identifier"  shift, and go to state 3
    "in"          shift, and go to state 19
    "to"          shift, and go to state 20
    "step"        shift, and go to state 21

    identifier  go to state 102


state 38

  128 translation_unit_statements: statement .

    $default  reduce using rule 128 (translation_unit_statements)


state 39

    7 map_constant: compound_statement .
   91 statement: compound_statement .

    '['       reduce using rule 7 (map_constant)
    '['       [reduce using rule 91 (statement)]
    '('       reduce using rule 7 (map_constant)
    '('       [reduce using rule 91 (statement)]
    '.'       reduce using rule 7 (map_constant)
    $default  reduce using rule 91 (statement)


state 40

   92 statement: selection_statement .

    $default  reduce using rule 92 (statement)


state 41

   93 statement: iteration_statement .

    $default  reduce using rule 93 (statement)


state 42

   94 statement: function_definition_statement .

    $default  reduce using rule 94 (statement)


state 43

   95 statement: function_call_statement .

    $default  reduce using rule 95 (statement)


state 44

   97 statement: variable_creation_statement .

    $default  reduce using rule 97 (statement)


state 45

   98 statement: return_statement .

    $default  reduce using rule 98 (statement)


state 46

  129 translation_unit_statements: translation_unit_statements . statement
  131 translation_unit: translation_unit_statements .

    "flush evaluaton"          shift, and go to state 2
    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "bool"                     shift, and go to state 7
    "int"                      shift, and go to state 8
    "float"                    shift, and go to state 9
    "string"                   shift, and go to state 10
    "Array"                    shift, and go to state 11
    "Map"                      shift, and go to state 12
    "Function"                 shift, and go to state 13
    "Output"                   shift, and go to state 14
    "Input"                    shift, and go to state 15
    "Param"                    shift, and go to state 16
    "if"                       shift, and go to state 17
    "for"                      shift, and go to state 18
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    "return"                   shift, and go to state 24
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    ';'                        shift, and go to state 27
    '{'                        shift, and go to state 28

    $default  reduce using rule 131 (translation_unit)

    identifier                     go to state 29
    array_constant                 go to state 30
    map_constant                   go to state 31
    primary_expression             go to state 32
    constant                       go to state 33
    function_call_expression       go to state 34
    postfix_expression             go to state 35
    assignment_statement           go to state 36
    type_specifier                 go to state 37
    statement                      go to state 103
    compound_statement             go to state 39
    selection_statement            go to state 40
    iteration_statement            go to state 41
    function_definition_statement  go to state 42
    function_call_statement        go to state 43
    variable_creation_statement    go to state 44
    return_statement               go to state 45


state 47

    0 $accept: translation_unit . "end of file"

    "end of file"  shift, and go to state 104


state 48

  130 translation_unit_statements: error ';' .

    $default  reduce using rule 130 (translation_unit_statements)


state 49

  122 function_definition_statement: "Function" identifier . '(' ')' compound_statement
  123                              | "Function" identifier . '(' function_argument_decl_list ')' compound_statement
  124                              | "Function" identifier . '=' expression ';'

    '('  shift, and go to state 105
    '='  shift, and go to state 106


state 50

  108 selection_statement: "if" '(' . expression ')' statement "else" statement
  109                    | "if" '(' . expression ')' statement

    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    '+'                        shift, and go to state 52
    '-'                        shift, and go to state 53
    '~'                        shift, and go to state 54
    '!'                        shift, and go to state 55
    '{'                        shift, and go to state 28

    identifier                       go to state 56
    array_constant                   go to state 30
    map_constant                     go to state 31
    primary_expression               go to state 32
    constant                         go to state 33
    function_call_expression         go to state 57
    postfix_expression               go to state 58
    unary_expression                 go to state 59
    unary_operator                   go to state 60
    multiplicative_expression        go to state 61
    additive_expression              go to state 62
    shift_expression                 go to state 63
    relational_expression            go to state 64
    equality_expression              go to state 65
    and_expression                   go to state 66
    exclusive_or_expression          go to state 67
    inclusive_or_expression          go to state 68
    logical_and_expression           go to state 69
    logical_exclusive_or_expression  go to state 70
    logical_inclusive_or_expression  go to state 71
    conditional_expression           go to state 72
    expression                       go to state 107
    compound_statement               go to state 74


state 51

  116 iteration_statement: "for" identifier . "in" expression statement
  117                    | "for" identifier . '=' sequence statement

    "in"  shift, and go to state 108
    '='   shift, and go to state 109


state 52

   31 unary_operator: '+' .

    $default  reduce using rule 31 (unary_operator)


state 53

   32 unary_operator: '-' .

    $default  reduce using rule 32 (unary_operator)


state 54

   33 unary_operator: '~' .

    $default  reduce using rule 33 (unary_operator)


state 55

   34 unary_operator: '!' .

    $default  reduce using rule 34 (unary_operator)


state 56

    8 primary_expression: identifier .

    $default  reduce using rule 8 (primary_expression)


state 57

   23 postfix_expression: function_call_expression .

    $default  reduce using rule 23 (postfix_expression)


state 58

   19 function_call_expression: postfix_expression . '(' ')'
   20                         | postfix_expression . '(' argument_expression_list ')'
   21 postfix_expression: postfix_expression . '[' expression ']'
   22                   | postfix_expression . '.' identifier
   29 unary_expression: postfix_expression .

    '['  shift, and go to state 110
    '('  shift, and go to state 100
    '.'  shift, and go to state 111

    '['       [reduce using rule 29 (unary_expression)]
    '('       [reduce using rule 29 (unary_expression)]
    $default  reduce using rule 29 (unary_expression)


state 59

   35 multiplicative_expression: unary_expression .

    $default  reduce using rule 35 (multiplicative_expression)


state 60

   30 unary_expression: unary_operator . unary_expression

    "identifier"               shift, and go to state 3
    "integer constant"         shift, and go to state 4
    "floating point constant"  shift, and go to state 5
    "string constant"          shift, and go to state 6
    "in"                       shift, and go to state 19
    "to"                       shift, and go to state 20
    "step"                     shift, and go to state 21
    "true"                     shift, and go to state 22
    "false"                    shift, and go to state 23
    '['                        shift, and go to state 25
    '('                        shift, and go to state 26
    '+'                        shift, and go to state 52
    '-'                        shift, and go to state 53
    '~'                        shift, and go to state 54
    '!'                        shift, and go to state 55
    '{'                        shift, and go to state 28

    identifier                go to state 56
    array_constant            go to state 30
    map_constant              go to state 31
    primary_expression        go to state 32
    constant                  go to state 33
    function_call_expression  go to state 57
    postfix_expression        go to state 58
    unary_expression          go to state 112
    unary_operator            go to state 60
    compound_statement        go to state 74


state 61

   36 multiplicative_expression: multiplicative_expression . '*' unary_expression
   37                          | multiplicative_expression . '/' unary_expression
   38                          | multiplicative_expression . '%' unary_expression
   39 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 113
    '/'  shift, and go to state 114
    '%'  shift, and go to state 115

    $default  reduce using rule 39 (additive_expression)


state 62

   40 additive_expression: additive_expression . '+' multiplicative_expression
   41                    | additive_expression . '-' multiplicative_expression
   42 shift_expression: additive_expression .

    '+'  shift, and go to state 116
    '-'  shift, and go to state 117

    $default  reduce using rule 42 (shift_expression)


state 63

   43 shift_expression: shift_expression . "<<" additive_expression
   44                 | shift_expression . ">>" additive_expression
   45 relational_expression: shift_expression .

    "<<"  shift, and go to state 118
    ">>"  shift, and go to state 119

    $default  reduce using rule 45 (relational_expression)


state 64

   46 relational_expression: relational_expression . '<' shift_expression
   47                      | relational_expression . '>' shift_expression
   48                      | relational_expression . "<=" shift_expression
   49                      | relational_expression . ">=" shift_expression
   50 equality_expression: relational_expression .

    "<="  shift, and go to state 120
    ">="  shift, and go to state 121
    '<'   shift, and go to state 122
    '>'   shift, and go to state 123

    $default  reduce using rule 50 (equality_expression)


state 65

   51 equality_expression: equality_expression . "==" relational_expression
   52                    | equality_expression . "!=" relational_expression
   53 and_expression: equality_expression .

    "=="  shift, and go to state 124
    "!="  shift, and go to state 125

    $default  reduce using rule 53 (and_expression)


state 66

   54 and_expression: and_expression . '&' equality_expression
   55 exclusive_or_expression: and_expression .

    '&'  shift, and go to state 126

    $default  reduce using rule 55 (exclusive_or_expression)


state 67

   56 exclusive_or_expression: exclusive_or_expression . '^' and_expression
   57 inclusive_or_expression: exclusive_or_expression .

    '^'  shift, and go to state 127

    $default  reduce using rule 57 (inclusive_or_expression)


state 68

   58 inclusive_or_expression: inclusive_or_expression . '|' exclusive_or_expression
   59 logical_and_expression: inclusive_or_expression .

    '|'  shift, and go to state 128

    $default  reduce using rule 59 (logical_and_expression)


state 69

   60 logical_and_expression: logical_and_expression . "&&" inclusive_or_expression
   61 logical_exclusive_or_expression: logical_and_expression .

    "&&"  shift, and go to state 129

    $default  reduce using rule 61 (logical_exclusive_or_expression)


state 70

   62 logical_exclusive_or_expression: logical_exclusive_or_expression . "^^" logical_and_expression
   63 logical_inclusive_or_expression: logical_exclusive_or_expression .

    "^^"  shift, and go to state 130

    $default  reduce using rule 63 (logical_inclusive_or_expression)


state 71

   64 logical_inclusive_or_expression: logical_inclusive_or_expression . "||" logical_exclusive_or_expression
   65 conditional_expression: logical_inclusive_or_expression .
   66                       | logical_inclusive_or_expression . '?' expression ':' conditional_expression

    "||"  shift, and go to state 131
    '?'   shift, and go to state 132

    $default  reduce using rule 65 (conditional_expression)


state 72

   67 expression: conditional_expression .

    $default  reduce using rule 67 (expression)


state 73

  127 return_statement: "return" expression . ';'

    ';'  shift, and go to state 133


state 74

    7 map_constant: compound_statement .

    $default  reduce using rule 7 (map_constant)


state 75

    5 array_constant: '[' ']' .

    $default  reduce using rule 5 (array_constant)


state 76

  110 expression_sequence_expression: expression .
  112 sequence_expression: expression . "to" expression
  113                    | expression . "to" expression "step" expression

    "to"  shift, and go to state 134

    "to"      [reduce using rule 110 (expression_sequence_expression)]
    $default  reduce using rule 110 (expression_sequence_expression)


state 77

  111 expression_sequence_expression: expression_sequence_expression . ',' expression
  114 sequence_expression: expression_sequence_expression .

    ','  shift, and go to state 135

    $default  reduce using rule 114 (sequence_expression)


state 78

  115 sequence: sequence_expression .

    $default  reduce using rule 115 (sequence)


state 79
